# Solutions

./: LICENSE
codewars/: a-plus-b-equals-b-plus-a-prove-it.hs  a-simple-postfix-language.hs  brace-expansion.hs  find-all-possible-number-combos-that-sum-to-a-number.hs  json-parser.hs  odd-plus-even-equals-odd-prove-it.hs  permutations.hs  simple-fun-number-197-dividing-marbles.hs  singletons.hs
codewars/preloaded/: preloaded-a-plus-b-equals-b-plus-a-prove-it.hs  preloaded-json-parser.hs
luogu/: .gitignore
luogu/algorithm/: avl.hpp  binary_search_tree.hpp  breadTh_first_search.hpp  deep_first_search.hpp  kruskal.hpp  merge_sort.hpp  merge_sort.hs  prim.hpp  segment_tree.hpp  shortest_path.hpp  splay.hpp  treap.hpp
luogu/algorithm/utils/: range.cpp  range.hpp  tree.cpp  tree.hpp
luogu/cxx/: CMakeLists.txt  make
luogu/cxx/spj/: .gitignore  checker.cpp  config.yml  ice1.in  ice1.out  ice2.in  ice2.out  ice3.in  ice3.out
luogu/cxx/src/: AT45.cpp  AT882.cpp  BigInt.cpp  P1000.cpp  P1001.cpp  P1003.cpp  P1008.cpp  P1012.cpp  P1015.cpp  P1019.cpp  P1020.cpp  P1022.cpp  P1025.cpp  P1028.cpp  P1030.cpp  P1031.cpp  P1039.cpp  P1042.cpp  P1048.cpp  P1051.cpp  P1055.cpp  P1059.cpp  P1067.cpp  P1068.cpp  P1071.cpp  P1079.cpp  P1083.cpp  P1085.cpp  P1086.cpp  P1087.cpp  P1089.cpp  P1090.cpp  P1093.cpp  P1098.cpp  P1101.cpp  P1111.cpp  P1115.cpp  P1134.cpp  P1141.cpp  P1149.cpp  (+77 more)
luogu/cxx/src/algo/: Dijkstra.cpp  RangeAdd.cpp  TreeRt.cpp  kruskal.cpp  topo.cpp
luogu/cxx/src/contest/: T90991.cpp  T90991.hs  T90992.cpp  T90992.py  T90993.cpp
luogu/cxx/src/practice/: PJ7-DAGSP.cpp  PJ7-LIS.cpp
luogu/haskell/: .gitignore  package.yaml
luogu/haskell/app/: Main.hs
luogu/haskell/src/: P1000.hs  P1001.hs  P1003.hs  P1009.hs  P1010.hs  P1019.hs  P1025.hs  P1028.hs  P1055.hs  P1059.hs  P1067.hs  P1079.hs  P1086.hs  P1104.hs  P1149.hs  P1150.hs  P1151.hs  P1177.hs  P1179.hs  P1181.hs  P1184.hs  P1200.hs  P1208.hs  P1226.hs  P1303.hs  P1307.hs  P1420.hs  P1424.hs  P1427.hs  P1428.hs  P1449.hs  P1478.hs  P1540.hs  P1554.hs  P1567.hs  P1618.hs  P1634.hs  P1689.hs  P1706.hs  P1720.hs  (+18 more)
luogu/kotlin/: build.gradle.kts  gradle.properties  settings.gradle.kts
luogu/kotlin/src/: P1000.kt  P1001.kt  P1190.kt  P1255.kt  P1426.kt  P1449.kt  P1551.java  P1554.kt  P1567.kt  P2482.kt  P3695.kt  P4136.kt
luogu/kotlin/src/algo/: UnionFind.java
luogu/rust/: .gitignore  Cargo.toml
luogu/rust/src/: main.rs  p1042.rs  p1427.rs  p1706.rs  p2676.rs  p3367.rs
