cmake_minimum_required(VERSION 3.11)
project(LuoGu)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "-g -Wall")

add_executable(AT45 src/AT45.cpp)
add_executable(AT882 src/AT882.cpp)
add_executable(BigInt src/BigInt.cpp)
add_executable(P1000 src/P1000.cpp)
add_executable(P1001 src/P1001.cpp)
add_executable(P1003 src/P1003.cpp)
add_executable(P1008 src/P1008.cpp)
add_executable(P1012 src/P1012.cpp)
add_executable(P1015 src/P1015.cpp)
add_executable(P1019 src/P1019.cpp)
add_executable(P1020 src/P1020.cpp)
add_executable(P1022 src/P1022.cpp)
add_executable(P1025 src/P1025.cpp)
add_executable(P1028 src/P1028.cpp)
add_executable(P1030 src/P1030.cpp)
add_executable(P1031 src/P1031.cpp)
add_executable(P1039 src/P1039.cpp)
add_executable(P1042 src/P1042.cpp)
add_executable(P1048 src/P1048.cpp)
add_executable(P1051 src/P1051.cpp)
add_executable(P1055 src/P1055.cpp)
add_executable(P1059 src/P1059.cpp)
add_executable(P1067 src/P1067.cpp)
add_executable(P1068 src/P1068.cpp)
add_executable(P1071 src/P1071.cpp)
add_executable(P1079 src/P1079.cpp)
add_executable(P1083 src/P1083.cpp)
add_executable(P1085 src/P1085.cpp)
add_executable(P1086 src/P1086.cpp)
add_executable(P1087 src/P1087.cpp)
add_executable(P1089 src/P1089.cpp)
add_executable(P1090 src/P1090.cpp)
add_executable(P1093 src/P1093.cpp)
add_executable(P1098 src/P1098.cpp)
add_executable(P1101 src/P1101.cpp)
add_executable(P1111 src/P1111.cpp)
add_executable(P1115 src/P1115.cpp)
add_executable(P1134 src/P1134.cpp)
add_executable(P1141 src/P1141.cpp)
add_executable(P1149 src/P1149.cpp)
add_executable(P1160 src/P1160.cpp)
add_executable(P1162 src/P1162.cpp)
add_executable(P1177 src/P1177.cpp)
add_executable(P1190 src/P1190.cpp)
add_executable(P1192 src/P1192.cpp)
add_executable(P1198 src/P1198.cpp)
add_executable(P1200 src/P1200.cpp)
add_executable(P1216 src/P1216.cpp)
add_executable(P1219 src/P1219.cpp)
add_executable(P1223 src/P1223.cpp)
add_executable(P1305 src/P1305.cpp)
add_executable(P1308 src/P1308.cpp)
add_executable(P1316 src/P1316.cpp)
add_executable(P1322 src/P1322.cpp)
add_executable(P1421 src/P1421.cpp)
add_executable(P1422 src/P1422.cpp)
add_executable(P1423 src/P1423.cpp)
add_executable(P1424 src/P1424.cpp)
add_executable(P1425 src/P1425.cpp)
add_executable(P1427 src/P1427.cpp)
add_executable(P1428 src/P1428.cpp)
add_executable(P1443 src/P1443.cpp)
add_executable(P1449 src/P1449.cpp)
add_executable(P1452 src/P1452.cpp)
add_executable(P1464 src/P1464.cpp)
add_executable(P1498 src/P1498.cpp)
add_executable(P1540 src/P1540.cpp)
add_executable(P1551 src/P1551.cpp)
add_executable(P1553 src/P1553.cpp)
add_executable(P1558 src/P1558.cpp)
add_executable(P1563 src/P1563.cpp)
add_executable(P1567 src/P1567.cpp)
add_executable(P1598 src/P1598.cpp)
add_executable(P1601 src/P1601.cpp)
add_executable(P1603 src/P1603.cpp)
add_executable(P1605 src/P1605.cpp)
add_executable(P1618 src/P1618.cpp)
add_executable(P1683 src/P1683.cpp)
add_executable(P1724 src/P1724.cpp)
add_executable(P1739 src/P1739.cpp)
add_executable(P1781 src/P1781.cpp)
add_executable(P1824 src/P1824.cpp)
add_executable(P1855 src/P1855.cpp)
add_executable(P1908 src/P1908.cpp)
add_executable(P1909 src/P1909.cpp)
add_executable(P1914 src/P1914.cpp)
add_executable(P1957 src/P1957.cpp)
add_executable(P1996 src/P1996.cpp)
add_executable(P2089 src/P2089.cpp)
add_executable(P2117 src/P2117.cpp)
add_executable(P2142 src/P2142.cpp)
add_executable(P2550 src/P2550.cpp)
add_executable(P2670 src/P2670.cpp)
add_executable(P2678 src/P2678.cpp)
add_executable(P2871 src/P2871.cpp)
add_executable(P3366 src/P3366.cpp)
add_executable(P3367 src/P3367.cpp)
add_executable(P3372 src/P3372.cpp)
add_executable(P3397 src/P3397.cpp)
add_executable(P3692 src/P3692.cpp)
add_executable(P3742 src/P3742.cpp)
add_executable(P3952 src/P3952.cpp)
add_executable(P3955 src/P3955.cpp)
add_executable(P4008 src/P4008.cpp)
add_executable(P4888 src/P4888.cpp)
add_executable(P4889 src/P4889.cpp)
add_executable(P5462 src/P5462.cpp)
add_executable(U51941 src/U51941.cpp)
add_executable(U51942 src/U51942.cpp)
add_executable(U51945 src/U51945.cpp)
add_executable(U53525 src/U53525.cpp)
add_executable(U79256 src/U79256.cpp)
add_executable(U79358 src/U79358.cpp)
add_executable(U79453 src/U79453.cpp)
add_executable(U79462 src/U79462.cpp)
add_executable(U82137 src/U82137.cpp)
add_executable(UVA572 src/UVA572.cpp)
add_executable(UVA673 src/UVA673.cpp)

add_executable(SPJ spj/testlib.h spj/checker.cpp)